<resources>
    <string name="app_name">CarWash</string>
    <string name="amount">Amount</string>
    <string name="rewardpercentage">rewardpercentage</string>
    <string name="reset_btn">reset_btn</string>
    <string name="Rewardpercentage">Rewardpecentage</string>
    <string name="calculate_btn">calculate_btn</string>
    <string name="Reward_btn">reward_btn</string>
    <string name="previous_record">previous_record</string>
    <string name="rewardans">rewardans</string>
    <string name="previous">Previous Record</string>
    <string name="reward_percentage">Reward percentage</string>
    <string name="_200">200/-</string>
    <string name="earned">Earned</string>
    <string name="points">points</string>
    <string name="demo_number">9876543210</string>
    <string name="demo_name">Shreyas Deavdiga</string>
    <string name="car_details">Car Details</string>
    <string name="car_ready">Car is washed and ready for check out.</string>
    <string name="car_wash_notification">Car will be washed in</string>
    <string name="number_plate">KA-19EB-4413</string>
    <string name="reward_list_amount">Amount :2000rs</string>
    <string name="date">28/12/2018</string>
    <string name="time">1:10 am</string>
    <string name="reward_amount">Reward : 10rs</string>
    <string name="place">Place</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="model">model</string>

    <string-array name="brand">
        <item>Brand</item>
        <item>Maruthi Suzuki</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Renault</item>
        <item>Skoda</item>
        <item>Toyota</item>
        <item>BMW</item>
        <item>Audi</item>
        <item>Ford</item>
        <item>Mercedes</item>
        <item>Mahindra</item>
        <item>Tata</item>
    </string-array>
    <string-array name="fuel">
        <item>Fuel</item>
        <item>Petrol</item>
        <item>Diesel</item>
    </string-array>
</resources>
