<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@drawable/car_list_background"
    android:paddingStart="30dp"
    android:paddingEnd="10dp"
    android:paddingTop="30dp">

    <TextView
        android:id="@+id/reward_num_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_plate"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reward_amount"
            android:text="@string/amount"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            >

            <TextView
                android:id="@+id/reward_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/reward_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reward_rewarded"
        android:text="@string/reward_amount"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"

        />

</LinearLayout>