<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rewardpage"
    android:orientation="vertical"
    android:background="@drawable/app_background">
    <TextView
        android:layout_width="180dp"
        android:layout_height="170dp"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:text="@string/_200"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="#f8f8f8"
        android:paddingTop="120dp"
        android:paddingStart="50dp"
        android:paddingEnd="10dp"
        android:background="@drawable/giftbox"/>

    <EditText
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:id="@+id/amount"
            android:inputType="number"
            android:hint="@string/amount"
            android:background="@drawable/reward_box_edittext"
            android:paddingStart="30dp"
        android:paddingEnd="20dp"
            android:textSize="20sp"
        tools:ignore="Autofill" />

    <EditText
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:id="@+id/Rewardpercentage"
            android:inputType="number"
            android:hint="@string/reward_percentage"
            android:background="@drawable/reward_box_edittext"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
            android:textSize="20sp"
        tools:ignore="Autofill" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

        <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/reset_btn"
               style="?android:attr/buttonBarButtonStyle"
               android:background="@drawable/reward_reset_button"
               android:layout_weight="1"
               android:layout_gravity="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/calulate_btn"
            android:background="@drawable/reward_calc_button"
            android:layout_weight="1"
            android:layout_gravity="center" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rewardans"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:textSize="20sp" />

    <Button
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:id="@+id/Reward_btn"
        android:layout_gravity="center"
        android:background="@drawable/reward_button_rw"
        android:elevation="100dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:elevation="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#00465e"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:id="@+id/previous_record"
            android:textColor="#99a8ac"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"/>
    </android.support.v7.widget.CardView>

</LinearLayout>
